--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ SET(CPACK_GENERATOR "DEB")
 SET(CPACK_PACKAGE_VERSION "0.1")
 SET(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
 SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Jakob Ketterl <jakob.ketterl@gmx.de>")
+SET(CPACK_DEBIAN_PACKAGE_DESCRIPTION "OpenWebRX SDR hardware interfacing binaries")
 SET(CPACK_DEBIAN_PACKAGE_DEPENDS "librtlsdr0 (>= 0.6), libsoapysdr0.6 (>= 0.6)")
 SET(CPACK_DEBIAN_PACKAGE_SECTION "hamradio")
 INCLUDE(CPack)
