use function multiversioning, if available

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
 endif()
 
+SET(CMAKE_CXX_FLAGS_DEBUG "-O3 -fopt-info-vec")
+SET(CMAKE_C_FLAGS_DEBUG "-O3 -fopt-info-vec")
 SET(CMAKE_CXX_FLAGS_OPTIMIZED "-O3")
 SET(CMAKE_C_FLAGS_OPTIMIZED "-O3")
 SET(CMAKE_CXX_FLAGS_RELEASE "-g -O2")
