--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ if (RTLSDR_FOUND)
     check_function_exists(rtlsdr_set_bias_tee HAS_RTLSDR_SET_BIAS_TEE)
     UNSET(CMAKE_REQUIRED_LIBRARIES)
 
-    add_executable(rtl_connector rtl_connector.c)
+    add_executable(rtl_connector rtl_connector.c strtolower.c)
     target_link_libraries(rtl_connector version ${RTL_LIBS})
     if (HAS_RTLSDR_SET_BIAS_TEE)
         target_compile_definitions(rtl_connector PUBLIC HAS_RTLSDR_SET_BIAS_TEE)
@@ -49,7 +49,7 @@ endif()
 if (SoapySDR_FOUND)
     SET(SOAPY_LIBS ${LIBS} ${SoapySDR_LIBRARIES})
     INCLUDE_DIRECTORIES("${SoapySDR_INCLUDE_DIRS}")
-    add_executable(soapy_connector soapy_connector.c)
+    add_executable(soapy_connector soapy_connector.c strtolower.c)
     target_link_libraries(soapy_connector version ${SOAPY_LIBS})
     install(TARGETS soapy_connector DESTINATION bin)
 endif()
@@ -57,6 +57,10 @@ endif()
 if (NOT RTLSDR_FOUND AND NOT SoapySDR_FOUND)
     message(SEND_ERROR "ERROR: Neither SoapySDR nor rtlsdr libraries have been found, there's nothing to build.")
 endif()
+
+add_executable(rtl_tcp_connector rtl_tcp_connector.c strtolower.c)
+target_link_libraries(rtl_tcp_connector version ${LIBS})
+install(TARGETS rtl_tcp_connector DESTINATION bin)
 
 SET(CPACK_GENERATOR "DEB")
 SET(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
