--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,10 @@ if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
 endif()
 
-SET(CMAKE_CXX_FLAGS_DEBUG "-O3 -fopt-info-vec")
-SET(CMAKE_C_FLAGS_DEBUG "-O3 -fopt-info-vec")
-SET(CMAKE_CXX_FLAGS_RELEASE "-g -O2")
-SET(CMAKE_C_FLAGS_RELEASE "-g -O2")
+SET(CMAKE_CXX_FLAGS_DEBUG "-g -O3 -fopt-info-vec")
+SET(CMAKE_C_FLAGS_DEBUG "-g -O3 -fopt-info-vec")
+SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
+SET(CMAKE_C_FLAGS_RELEASE "-O2")
 
 project (owrx-connector VERSION 0.4.0)
 
@@ -15,8 +15,8 @@ include(CheckFunctionExists)
 include(cmake/DetectIfunc.cmake)
 if (HAS_IFUNC)
     add_definitions(-DOWRX_CONNECTOR_FMV)
-    SET(CMAKE_CXX_FLAGS_RELEASE "-g -O3")
-    SET(CMAKE_C_FLAGS_RELEASE "-g -O3")
+    SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
+    SET(CMAKE_C_FLAGS_RELEASE "-O3")
 endif()
 
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/")
