--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ project (owrx-connector VERSION 0.4.0)
 
 include(CheckFunctionExists)
 include(cmake/DetectIfunc.cmake)
+include(GNUInstallDirs)
+
 if (HAS_IFUNC)
     add_definitions(-DOWRX_CONNECTOR_FMV)
     SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
@@ -30,6 +32,10 @@ SET(LIBS ${LIBS} ${CMAKE_THREAD_LIBS_INIT})
 add_library(version STATIC version.c)
 target_include_directories (version PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
+add_library(owrx-connector SHARED connector.cpp conversions.c ringbuffer.cpp iq_connection.cpp control_connection.cpp gainspec.cpp)
+set_target_properties(owrx-connector PROPERTIES VERSION ${PROJECT_VERSION})
+install(TARGETS owrx-connector LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
+
 if (RTLSDR_FOUND)
     SET(RTL_LIBS ${LIBS} ${RTLSDR_LIBRARY})
     INCLUDE_DIRECTORIES("${RTLSDR_INCLUDE_DIRS}")
@@ -38,10 +44,11 @@ if (RTLSDR_FOUND)
     check_function_exists(rtlsdr_set_bias_tee HAS_RTLSDR_SET_BIAS_TEE)
     UNSET(CMAKE_REQUIRED_LIBRARIES)
 
-    add_executable(rtl_connector rtl_connector.cpp connector.cpp conversions.c ringbuffer.cpp iq_connection.cpp control_connection.cpp gainspec.cpp)
+    add_executable(rtl_connector rtl_connector.cpp)
     if (HAS_RTLSDR_SET_BIAS_TEE)
         target_compile_definitions(rtl_connector PUBLIC HAS_RTLSDR_SET_BIAS_TEE)
     endif()
+    target_link_libraries(rtl_connector owrx-connector)
     target_link_libraries(rtl_connector ${RTL_LIBS})
     install(TARGETS rtl_connector DESTINATION bin)
 endif()
