implement soapy connector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,8 +61,8 @@ endif()
 if (SoapySDR_FOUND)
     SET(SOAPY_LIBS ${LIBS} ${SoapySDR_LIBRARIES})
     INCLUDE_DIRECTORIES("${SoapySDR_INCLUDE_DIRS}")
-    add_executable(soapy_connector soapy_connector.c strtolower.c)
-    target_link_libraries(soapy_connector version ${SOAPY_LIBS})
+    add_executable(soapy_connector soapy_connector.cpp)
+    target_link_libraries(soapy_connector owrx-connector ${SOAPY_LIBS})
     install(TARGETS soapy_connector DESTINATION bin)
 endif()
 
