--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -16,7 +16,7 @@ if (RTLSDR_FOUND)
         target_compile_definitions(rtl_connector PUBLIC HAS_RTLSDR_SET_BIAS_TEE)
     endif()
     target_link_libraries(rtl_connector owrx-connector ${RTL_LIBS})
-    install(TARGETS rtl_connector DESTINATION bin)
+    install(TARGETS rtl_connector DESTINATION ${CMAKE_INSTALL_BINDIR})
 endif()
 
 if (SoapySDR_FOUND)
@@ -24,7 +24,7 @@ if (SoapySDR_FOUND)
     INCLUDE_DIRECTORIES("${SoapySDR_INCLUDE_DIRS}")
     add_executable(soapy_connector soapy_connector.cpp)
     target_link_libraries(soapy_connector owrx-connector ${SOAPY_LIBS})
-    install(TARGETS soapy_connector DESTINATION bin)
+    install(TARGETS soapy_connector DESTINATION ${CMAKE_INSTALL_BINDIR})
 endif()
 
 if (NOT RTLSDR_FOUND AND NOT SoapySDR_FOUND)
@@ -33,4 +33,4 @@ endif()
 
 add_executable(rtl_tcp_connector rtl_tcp_connector.cpp)
 target_link_libraries(rtl_tcp_connector owrx-connector ${LIBS})
-install(TARGETS rtl_tcp_connector DESTINATION bin)
+install(TARGETS rtl_tcp_connector DESTINATION ${CMAKE_INSTALL_BINDIR})
