apply compiler optimization for debian builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
 endif()
 
+if (CMAKE_BUILD_TYPE STREQUAL None)
+    set(CMAKE_BUILD_TYPE RelWithDebInfo)
+endif()
+
 project (owrx-connector VERSION 0.5.0)
 add_definitions(-DVERSION="${PROJECT_VERSION}-dev")
 
@@ -30,6 +34,8 @@ if (HAS_IFUNC)
     add_definitions(-DOWRX_CONNECTOR_FMV)
     SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
     SET(CMAKE_C_FLAGS_RELEASE "-O3")
+    SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g -O3 -DNDEBUG")
+    SET(CMAKE_C_FLAGS_RELWITHDEBINFO "-g -O3 -DNDEBUG")
 endif()
 
 SET(LIBS ${LIBS} ${CMAKE_THREAD_LIBS_INIT})
