--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,8 @@ SET(CMAKE_CXX_FLAGS_DEBUG "-g -O3 -fopt-info-vec")
 SET(CMAKE_C_FLAGS_DEBUG "-g -O3 -fopt-info-vec")
 SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
 SET(CMAKE_C_FLAGS_RELEASE "-O2")
+SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g -O2 -DNDEBUG")
+SET(CMAKE_C_FLAGS_RELWITHDEBINFO "-g -O2 -DNDEBUG")
 
 if (HAS_IFUNC)
     add_definitions(-DOWRX_CONNECTOR_FMV)
