--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,8 +32,8 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES ^arm.*)
         set(HAS_NEON true)
     endif()
     if (HAS_NEON)
-        SET(CMAKE_CXX_FLAGS "-mfloat-abi=hard -mfpu=neon -mvectorize-with-neon-quad")
-        SET(CMAKE_C_FLAGS "-mfloat-abi=hard -mfpu=neon -mvectorize-with-neon-quad")
+        SET(CMAKE_CXX_FLAGS "-march=armv7-a -mtune=cortex-a8 -mfloat-abi=hard -mfpu=neon -mvectorize-with-neon-quad")
+        SET(CMAKE_C_FLAGS "-march=armv7-a -mtune=cortex-a8 -mfloat-abi=hard -mfpu=neon -mvectorize-with-neon-quad")
     endif()
 endif()
 
