throughput testing scenario

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -31,6 +31,9 @@ if (NOT RTLSDR_FOUND AND NOT SoapySDR_FOUND)
     message(WARNING "WARNING: Neither SoapySDR nor rtlsdr libraries have been found, only rtl_tcp_conector will be built.")
 endif()
 
-add_executable(rtl_tcp_connector rtl_tcp_connector.cpp)
-target_link_libraries(rtl_tcp_connector owrx-connector ${LIBS})
-install(TARGETS rtl_tcp_connector DESTINATION ${CMAKE_INSTALL_BINDIR})
+#add_executable(rtl_tcp_connector rtl_tcp_connector.cpp)
+#target_link_libraries(rtl_tcp_connector owrx-connector ${LIBS})
+#install(TARGETS rtl_tcp_connector DESTINATION ${CMAKE_INSTALL_BINDIR})
+
+add_executable(throughput_test throughput_test.cpp rtl_tcp_connector.cpp)
+target_link_libraries(throughput_test owrx-connector ${LIBS})
