--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Maintainer: Jakob Ketterl <jakob.ketterl@gmx.de>
 Section: hamradio
 Priority: optional
 Standards-Version: 4.2.0
-Build-Depends: debhelper (>= 11), cmake (>= 3), pkg-config, librtlsdr-dev, libsoapysdr-dev
+Build-Depends: debhelper (>= 11), cmake (>= 3), pkg-config, librtlsdr-dev, libsoapysdr-dev, libcsdr-dev (>= 0.18)
 Vcs-Browser: https://github.com/jketterl/owrx_connector
 Vcs-Git: https://github.com/jketterl/owrx_connector.git
 
