--- a/src/lib/Config.cmake.in
+++ b/src/lib/Config.cmake.in
@@ -1,5 +1,8 @@
 @PACKAGE_INIT@
 
+include(CMakeFindDependencyMacro)
+find_dependency(Csdr 0.18 REQUIRED)
+
 include("${CMAKE_CURRENT_LIST_DIR}/OwrxConnectorTargets.cmake")
 
 check_required_components(OwrxConnector)
