--- a/debian/control
+++ b/debian/control
@@ -3,19 +3,19 @@ Maintainer: Jakob Ketterl <jakob.ketterl@gmx.de>
 Section: hamradio
 Priority: optional
 Standards-Version: 4.2.0
-Build-Depends: debhelper (>= 11), cmake (>= 3), pkg-config, librtlsdr-dev, libsoapysdr-dev, libcsdr-dev (>= 0.18)
+Build-Depends: debhelper (>= 11), cmake (>= 3), pkg-config, librtlsdr-dev, libsoapysdr-dev, libcsdr-dev (>= 0.19)
 Vcs-Browser: https://github.com/jketterl/owrx_connector
 Vcs-Git: https://github.com/jketterl/owrx_connector.git
 
 Package: libowrx-connector
 Architecture: any
-Depends: libcsdr0 (>= 0.18), ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: OpenWebRX connector base library
  Base library used to provide basic connector functionality
 
 Package: libowrx-connector-dev
 Architecture: any
-Depends: libowrx-connector (=${binary:Version}), libcsdr-dev (>= 0.18), ${shlibs:Depends}, ${misc:Depends}
+Depends: libowrx-connector (=${binary:Version}), libcsdr-dev (>= 0.19), ${misc:Depends}
 Description: OpenWebRX connector base library - development files
  Provides includes and development files to build custom connectors
 
